--- a/Framework/Framework.csproj
+++ b/Framework/Framework.csproj
@@ -121,6 +121,8 @@
     <Compile Include="ObjectDefines\Realm.cs" />
     <Compile Include="ObjectDefines\Vector4.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Revision\Revision.cs" />
+    <Compile Include="Revision\Versions.cs" />
     <Compile Include="Singleton\Singleton.cs" />
     <Compile Include="Singleton\SingletonBase.cs" />
   </ItemGroup>
